--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logoimg"
+        android:icon="@drawable/logo_lok"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logoimg"
+        android:roundIcon="@drawable/logo_lok"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".UserProfActivity"></activity>
